<?xml version="1.0" encoding="utf-8"?>
<!-- SPEC 7.9.10 and 7.9.11 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- First in the menu because it is the one somebody looks for when they have to stop:
         twenty-seven items is more than one sitting, the draft already resumes where it was
         left, and nothing in the app said so. -->
    <item android:id="@+id/action_continue_later" android:title="@string/assign_continue_later" />
    <item android:id="@+id/action_accept_all" android:title="@string/assign_accept_all" />
    <item android:id="@+id/action_bulk" android:title="@string/bulk_open" />
    <item android:id="@+id/action_jump_to" android:title="@string/assign_jump_title" />
    <item android:id="@+id/action_all_common" android:title="@string/assign_all_common_title" />
    <!-- The reader can invent a row from a struck-through price or a savings note, and this
         is the screen where that gets noticed. -->
    <item android:id="@+id/action_remove_item" android:title="@string/assign_remove_item" />
</menu>
