<?xml version="1.0" encoding="utf-8"?>
<!--
  SPEC 4.4: one graph for the whole app. The start destination is chosen at runtime by
  MainActivity: S1 on a fresh install, Home once a household exists (SPEC 7.1.1, 7.3.1).
-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/setupGroupFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.householdsplitter.ui.welcome.WelcomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_welcome" />

    <fragment
        android:id="@+id/setupGroupFragment"
        android:name="com.householdsplitter.ui.setup.SetupGroupFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_setup_group" />

    <fragment
        android:id="@+id/setupMembersFragment"
        android:name="com.householdsplitter.ui.setup.SetupMembersFragment"
        android:label="@string/menu_members"
        tools:layout="@layout/fragment_setup_members" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.householdsplitter.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/importFragment"
        android:name="com.householdsplitter.ui.importer.ImportFragment"
        android:label="@string/import_title"
        tools:layout="@layout/fragment_import" />

    <fragment
        android:id="@+id/parsingFragment"
        android:name="com.householdsplitter.ui.parsing.ParsingFragment"
        android:label="@string/import_title"
        tools:layout="@layout/fragment_parsing" />

    <fragment
        android:id="@+id/reviewItemsFragment"
        android:name="com.householdsplitter.ui.review.ReviewItemsFragment"
        android:label="@string/review_title"
        tools:layout="@layout/fragment_review_items" />

    <fragment
        android:id="@+id/orderDetailsFragment"
        android:name="com.householdsplitter.ui.details.OrderDetailsFragment"
        android:label="@string/details_title"
        tools:layout="@layout/fragment_order_details" />

    <fragment
        android:id="@+id/participantsFragment"
        android:name="com.householdsplitter.ui.participants.ParticipantsFragment"
        android:label="@string/participants_title"
        tools:layout="@layout/fragment_participants" />

    <fragment
        android:id="@+id/assignFragment"
        android:name="com.householdsplitter.ui.assign.AssignFragment"
        android:label="@string/assign_title"
        tools:layout="@layout/fragment_assign" />

    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.householdsplitter.ui.summary.SummaryFragment"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.householdsplitter.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/imageViewerFragment"
        android:name="com.householdsplitter.ui.summary.ImageViewerFragment"
        tools:layout="@layout/fragment_image_viewer" />

    <fragment
        android:id="@+id/analyticsFragment"
        android:name="com.householdsplitter.ui.analytics.AnalyticsFragment"
        android:label="@string/analytics_title"
        tools:layout="@layout/fragment_analytics" />

    <fragment
        android:id="@+id/bulkAssignFragment"
        android:name="com.householdsplitter.ui.assign.BulkAssignFragment"
        android:label="@string/bulk_title"
        tools:layout="@layout/fragment_bulk_assign" />

    <fragment
        android:id="@+id/rulesFragment"
        android:name="com.householdsplitter.ui.rules.RulesFragment"
        android:label="@string/rules_title"
        tools:layout="@layout/fragment_rules" />

</navigation>
