<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/drawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="false">

    <ScrollView
        android:id="@+id/drawerScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/space_l">

            <!-- Which group you are in, stated before anything you could do to it. -->
            <LinearLayout
                android:id="@+id/drawerHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/space_l"
                android:paddingTop="@dimen/space_l"
                android:paddingEnd="@dimen/space_l"
                android:paddingBottom="@dimen/space_m">

                <TextView
                    android:id="@+id/drawerGroupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="@style/Text.ScreenTitle" />

                <TextView
                    android:id="@+id/drawerGroupMeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xxs"
                    android:textAppearance="@style/Text.Caption" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorOutlineVariant" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_l"
                android:paddingTop="@dimen/space_m"
                android:paddingEnd="@dimen/space_l"
                android:paddingBottom="@dimen/space_xs"
                android:text="@string/drawer_groups"
                android:textAppearance="@style/Text.SectionLabel" />

            <!-- One row per group, built in code because how many there are is data. -->
            <LinearLayout
                android:id="@+id/drawerGroupList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/drawerNewGroup"
                style="@style/Widget.Splitter.DrawerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_add"
                android:text="@string/drawer_new_group" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space_s"
                android:background="?attr/colorOutlineVariant" />

            <TextView
                android:id="@+id/drawerSpending"
                style="@style/Widget.Splitter.DrawerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_analytics" />

            <TextView
                android:id="@+id/drawerPeople"
                style="@style/Widget.Splitter.DrawerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_members" />

            <TextView
                android:id="@+id/drawerRules"
                style="@style/Widget.Splitter.DrawerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drawer_rules" />

            <TextView
                android:id="@+id/drawerExport"
                style="@style/Widget.Splitter.DrawerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_export_all" />

            <TextView
                android:id="@+id/drawerSettings"
                style="@style/Widget.Splitter.DrawerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_settings" />
        </LinearLayout>
    </ScrollView>
</com.google.android.material.navigation.NavigationView>
